# bazel_haskell_nix_sandbox

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
example/: BUILD.bazel
example/executables/: Main.hs
nix/: shell.nix
nix/nixpkgs/: cc-toolchain.nix
